# ESP-display

./: .clang-format  .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/private/: AdsTimer.cpp  Customer.cpp  Deck.cpp  DisplayFeeder.cpp  StringModifier.cpp
main/public/: AdsTimer.h  Customer.h  Deck.h  DisplayFeeder.h  StringModifier.h
